<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.tracking.personneltrackingdetail.PersonnelTrackingDetailFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="@dimen/margin_24"
        android:layout_marginVertical="@dimen/margin_60"
        android:background="@drawable/bg_card_view"
        android:backgroundTint="@color/cream"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/margin_32"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_48"
            android:layout_marginHorizontal="@dimen/margin_48"
            android:layout_marginVertical="@dimen/margin_8"
            android:background="@drawable/bg_card_view"
            android:backgroundTint="@color/green_spring_rain"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_name_and_surname"
                style="@style/Text.T1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:paddingHorizontal="@dimen/margin_16"
                android:text="@string/name_tr"
                tools:ignore="VisualLintTextFieldSize" />
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_48"
            android:layout_marginVertical="@dimen/margin_8"
            android:background="@drawable/bg_card_view"
            android:backgroundTint="@color/green_spring_rain"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="@dimen/size_48"
                android:layout_gravity="end"
                android:layout_marginVertical="@dimen/margin_8"
                android:layout_marginEnd="@dimen/margin_24"
                android:background="@drawable/bg_card_view"
                android:backgroundTint="@color/green_spring_rain"
                android:orientation="horizontal">

                <TextView
                    style="@style/Text.T1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="@dimen/margin_16"
                    android:gravity="center_vertical"
                    android:paddingHorizontal="@dimen/margin_16"
                    android:text="@string/enter_tr"
                    tools:ignore="VisualLintTextFieldSize" />

                <TextView
                    style="@style/Text.T1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="@dimen/margin_32"
                    android:gravity="center_vertical"
                    android:paddingHorizontal="@dimen/margin_16"
                    android:text="@string/exit_tr"
                    tools:ignore="VisualLintTextFieldSize" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_tracking_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/margin_16"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:listitem="@layout/item_tracking_detail" />
        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>